--- a/evaluacion_mod1.ipynb
+++ b/evaluacion_mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "aff6e735",
    "metadata": {},
    "outputs": [],
@@ -10,11 +10,12 @@
     "class TiendaOnline:    #Clase\n",
     "    \n",
     "    def __init__(self):  #Constructor\n",
-    "            \n",
-    "        self.inventario = []             #Atributo\n",
-    "        self.ventas_totales = 0.0\n",
+    "            #Atributos\n",
+    "        self.inventario = []       #Lista para el inventario vacia      \n",
+    "        self.ventas_totales = 0.0    #Para almacenar las ventas totales(float)\n",
     "\n",
     "                 #Metodos\n",
+    "    #Agregar producto, si existe se suma, si no existe se agrega\n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        for producto in self.inventario:\n",
     "            if producto[\"nombre\"] == nombre:\n",
@@ -22,11 +23,11 @@
     "                return\n",
     "\n",
     "        self.inventario.append({\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad})\n",
-    "\n",
+    "    #Ver el inventario\n",
     "    def ver_inventario(self):\n",
     "        for producto in self.inventario:                  # Marca de correccion\n",
     "            print(f\" Nombre: {producto[\"nombre\"]}, Precio: {producto[\"precio\"]}, Cantidad: {producto[\"cantidad\"]}\")\n",
-    "\n",
+    "    #Buscar por nombre del producto\n",
     "    def buscar_producto(self, nombre):\n",
     "        for producto in self.inventario:\n",
     "            if producto[\"nombre\"] == nombre:\n",
@@ -35,16 +36,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "43b32f29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tienda = TiendaOnline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5d93f497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"fresa\", 2.50, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "30468531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"pera\", 1.20, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d7a6160a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"fresa\", 2.50, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "42f220ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
