Resto del codigo del ejercicio con pruebas

--- a/evaluacion_mod1.ipynb
+++ b/evaluacion_mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 297,
    "id": "aff6e735",
    "metadata": {},
    "outputs": [],
@@ -20,23 +20,45 @@
     "        for producto in self.inventario:\n",
     "            if producto[\"nombre\"] == nombre:\n",
     "                producto[\"cantidad\"] += cantidad\n",
-    "                return\n",
-    "\n",
+    "                return   #return para que no se ejecute lo de abajo (si se ejecuta el if)\n",
+    "            #Se ejecuta si no entra en el if    \n",
     "        self.inventario.append({\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad})\n",
     "    #Ver el inventario\n",
     "    def ver_inventario(self):\n",
-    "        for producto in self.inventario:                  # Marca de correccion\n",
+    "        for producto in self.inventario:                 \n",
     "            print(f\" Nombre: {producto[\"nombre\"]}, Precio: {producto[\"precio\"]}, Cantidad: {producto[\"cantidad\"]}\")\n",
     "    #Buscar por nombre del producto\n",
     "    def buscar_producto(self, nombre):\n",
     "        for producto in self.inventario:\n",
+    "            if producto[\"nombre\"] == nombre:  \n",
+    "                print(f\" Nombre: {producto[\"nombre\"]}, Precio: {producto[\"precio\"]}, Cantidad: {producto[\"cantidad\"]}\")\n",
+    "                return            \n",
+    "        print(\"El producto no existe en el inventario\")\n",
+    "    #Actualizar las cantidades de producto que tengamos en el stock\n",
+    "    def actualizar_stock(self, nombre, cantidad):\n",
+    "        for producto in self.inventario:\n",
     "            if producto[\"nombre\"] == nombre:\n",
-    "                print(f\" Nombre: {producto[\"nombre\"]}, Precio: {producto[\"precio\"]}, Cantidad: {producto[\"cantidad\"]}\")"
+    "                producto[\"cantidad\"] += cantidad\n",
+    "                return  #Si entra en el if, termina la ejecucion\n",
+    "        print(\"El producto no esta en el inventario\")  #Si no entra en el if\n",
+    "    #Eliminar producto por nombre\n",
+    "    def eliminar_producto(self, nombre):\n",
+    "        for producto in self.inventario:\n",
+    "            if producto[\"nombre\"] == nombre:\n",
+    "                self.inventario.remove(producto)\n",
+    "                return #Finaliza aqui\n",
+    "        print(\"No se puede eliminar, no esta en el inventario\") #No entra al if, ejecuta el print\n",
+    "        #Calcular el total del inventario\n",
+    "    def calcular_valor_inventario(self):\n",
+    "        total = 0     #Para que almacene cada iteracion\n",
+    "        for producto in self.inventario:\n",
+    "            total += (producto[\"cantidad\"] * producto[\"precio\"])\n",
+    "        print(f\"El valor total del stock es {total}€\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 298,
    "id": "43b32f29",
    "metadata": {},
    "outputs": [],
@@ -46,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 299,
    "id": "5d93f497",
    "metadata": {},
    "outputs": [],
@@ -56,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 300,
    "id": "30468531",
    "metadata": {},
    "outputs": [],
@@ -66,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 301,
    "id": "d7a6160a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 302,
    "id": "42f220ce",
    "metadata": {},
    "outputs": [
@@ -91,6 +113,491 @@
    ],
    "source": [
     "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "8fef9c51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"fresa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "id": "767b046a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.actualizar_stock(\"fresa\", 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "id": "4e46e91c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'fresa', 'precio': 2.5, 'cantidad': 55},\n",
+       "  {'nombre': 'pera', 'precio': 1.2, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "id": "1ef8ad31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto no esta en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.actualizar_stock(\"uva\", 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "id": "5b5176c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"uva\", 2, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "id": "739f075a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 55\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 40\n",
+      " Nombre: uva, Precio: 2, Cantidad: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "id": "ecc6bf9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"uva\", 2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "id": "411cd933",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'fresa', 'precio': 2.5, 'cantidad': 55},\n",
+       "  {'nombre': 'pera', 'precio': 1.2, 'cantidad': 40},\n",
+       "  {'nombre': 'uva', 'precio': 2, 'cantidad': 25}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "id": "048edfa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 55\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 40\n",
+      " Nombre: uva, Precio: 2, Cantidad: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "id": "1f8d6fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"pera\", 1.20, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "id": "88922266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.actualizar_stock(\"uva\", 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "id": "af2e611f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 55\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 45\n",
+      " Nombre: uva, Precio: 2, Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "id": "cc95bbf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: uva, Precio: 2, Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"uva\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "id": "91a0a805",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"fresa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "7cb2aa3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: pera, Precio: 1.2, Cantidad: 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"pera\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "0a0b7e0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto no existe en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"sandia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "id": "935e98c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.actualizar_stock(\"fresa\", -5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "id": "f4970c32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 45\n",
+      " Nombre: uva, Precio: 2, Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "84257719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.eliminar_producto(\"pera\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "id": "12bc1de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'fresa', 'precio': 2.5, 'cantidad': 50},\n",
+       "  {'nombre': 'uva', 'precio': 2, 'cantidad': 40}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "1c25502a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
+      " Nombre: uva, Precio: 2, Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "id": "fd58d6ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se puede eliminar, no esta en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.eliminar_producto(\"pera\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "id": "36579cbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto no existe en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"pera\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "id": "91c1eb2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto no esta en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.actualizar_stock(\"pera\", 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "id": "645583eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor total del stock es 205.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.calcular_valor_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "id": "80fbb563",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.agregar_producto(\"sandia\", 3, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "id": "f3dfb6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: sandia, Precio: 3, Cantidad: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.buscar_producto(\"sandia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "a3e101d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
+      " Nombre: uva, Precio: 2, Cantidad: 40\n",
+      " Nombre: sandia, Precio: 3, Cantidad: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "id": "4e78ecfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor total del stock es 295.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.calcular_valor_inventario()"
    ]
   }
  ],
