inicio del bonus, con algunas pruebas de los primeros metodos

--- a/bonus_evaluacion.ipynb
+++ b/bonus_evaluacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 232,
    "id": "8d484fb3",
    "metadata": {},
    "outputs": [],
@@ -56,20 +56,33 @@
     "            total += (producto[\"cantidad\"] * producto[\"precio\"])\n",
     "        print(f\"El valor total del stock es {total}€\")\n",
     "\n",
-    "        #BONUS\n",
+    "                        #BONUS\n",
+    "        \n",
     "    #Agregar clientes al diccionario\n",
     "    def agregar_cliente(self, nombre, email):\n",
-    "        for k in self.clientes:\n",
-    "            if k in self.clientes:\n",
-    "                print(f\"La cuenta {self.clientes} ya existe\")\n",
-    "                return\n",
-    "        self.clientes[nombre] = {\"email\": email}  #Usamos update para agregar al diccionario y damos los parametros\n",
-    "        print(f\"Cliente añadido con exito\")"
+    "        self.clientes[nombre] = {\"email\": email}  #Agregamos cliente al dicionario con otro diccionario para almacenar el email\n",
+    "        print(f\"Cliente añadido con exito\")\n",
+    "\n",
+    "        # Ver una lista de los clientes\n",
+    "    def ver_clientes(self):\n",
+    "        for k,v in self.clientes.items(): #Itera en el diccionario\n",
+    "            print(f\"Nombre: {k}, Correo: {v[\"email\"]}\")  #Accede a su clave (nombre) y dentro del diccionario accede a la clave email \n",
+    "\n",
+    "    def realizar_compra(self):\n",
+    "        #while True:\n",
+    "            carrito = {}\n",
+    "            print(self.ver_inventario())\n",
+    "            compra = input(\"Ingresa el nombre del producto que deseas:\").lower()\n",
+    "            for producto in self.inventario:\n",
+    "                if compra in producto[\"nombre\"]:\n",
+    "                    carrito = {producto[\"nombre\"]: producto[\"precio\"]}\n",
+    "                    self.inventario[\"precio\"] -= carrito[\"precio\"]\n",
+    "                    print(carrito)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 233,
    "id": "86ca79cd",
    "metadata": {},
    "outputs": [
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 234,
    "id": "307554e2",
    "metadata": {},
    "outputs": [
@@ -110,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 235,
    "id": "e2883b79",
    "metadata": {},
    "outputs": [
@@ -118,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La cuenta {'Fabi': {'email': 'fabi@gmail.com'}} ya existe\n"
+      "Cliente añadido con exito\n"
      ]
     }
    ],
@@ -128,25 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "cb6f28b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La cuenta {'Fabi': {'email': 'fabi@gmail.com'}} ya existe\n"
-     ]
-    }
-   ],
-   "source": [
-    "tienda.agregar_cliente(\"marta\", \"marta@gmail.com\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 236,
    "id": "65516705",
    "metadata": {},
    "outputs": [
@@ -156,16 +151,87 @@
        "{'inventario': [{'nombre': 'fresa', 'precio': 2.5, 'cantidad': 50},\n",
        "  {'nombre': 'pera', 'precio': 1.2, 'cantidad': 40}],\n",
        " 'ventas_totales': 0.0,\n",
-       " 'clientes': {'Fabi': {'email': 'fabi@gmail.com'}}}"
+       " 'clientes': {'Fabi': {'email': 'fabi@gmail.com'},\n",
+       "  'Marta': {'email': 'marta@gmail.com'}}}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tienda.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "3b129439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Fabi, Correo: fabi@gmail.com\n",
+      "Nombre: Marta, Correo: marta@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_clientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "41ee174f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "407fdfeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
+      " Nombre: pera, Precio: 1.2, Cantidad: 40\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[239]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrealizar_compra\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[232]\u001b[39m\u001b[32m, line 70\u001b[39m, in \u001b[36mTiendaOnline.realizar_compra\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m compra \u001b[38;5;129;01min\u001b[39;00m producto[\u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m     69\u001b[39m     carrito = {producto[\u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m]: producto[\u001b[33m\"\u001b[39m\u001b[33mprecio\u001b[39m\u001b[33m\"\u001b[39m]}\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minventario\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprecio\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m -= carrito[\u001b[33m\"\u001b[39m\u001b[33mprecio\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     71\u001b[39m     \u001b[38;5;28mprint\u001b[39m(carrito)\n",
+      "\u001b[31mTypeError\u001b[39m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.realizar_compra()"
    ]
   }
  ],
