Cambios hechos al bonus metodos 2/3

--- a/bonus_evaluacion.ipynb
+++ b/bonus_evaluacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 284,
    "id": "8d484fb3",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "                self.inventario.remove(producto)\n",
     "                return #Finaliza aqui\n",
     "        print(\"No se puede eliminar, no esta en el inventario\") #No entra al if, ejecuta el print\n",
-    "        #Calcular el total del inventario\n",
+    "    #Calcular el total del inventario\n",
     "    def calcular_valor_inventario(self):\n",
     "        total = 0     #Para que almacene cada iteracion\n",
     "        for producto in self.inventario:\n",
@@ -63,26 +63,49 @@
     "        self.clientes[nombre] = {\"email\": email}  #Agregamos cliente al dicionario con otro diccionario para almacenar el email\n",
     "        print(f\"Cliente añadido con exito\")\n",
     "\n",
-    "        # Ver una lista de los clientes\n",
+    "    # Ver una lista de los clientes\n",
     "    def ver_clientes(self):\n",
     "        for k,v in self.clientes.items(): #Itera en el diccionario\n",
     "            print(f\"Nombre: {k}, Correo: {v[\"email\"]}\")  #Accede a su clave (nombre) y dentro del diccionario accede a la clave email \n",
     "\n",
+    "    # Permitir que el cliente compre varios articulos con un bucle, sumar al carrito, realizar compra, restar al inventario\n",
     "    def realizar_compra(self):\n",
-    "        #while True:\n",
-    "            carrito = {}\n",
-    "            print(self.ver_inventario())\n",
-    "            compra = input(\"Ingresa el nombre del producto que deseas:\").lower()\n",
-    "            for producto in self.inventario:\n",
-    "                if compra in producto[\"nombre\"]:\n",
-    "                    carrito = {producto[\"nombre\"]: producto[\"precio\"]}\n",
-    "                    self.inventario[\"precio\"] -= carrito[\"precio\"]\n",
-    "                    print(carrito)"
+    "        carrito = {} #El carro de la comprar\n",
+    "        print(self.ver_inventario()) #Mostrar el inventario\n",
+    "        while True:           #Bucle\n",
+    "            compra = input(\"Ingresa el nombre del producto que deseas o pulsa (S) para salir\").lower() \n",
+    "            if compra == \"s\":        #Permite salir del bucle\n",
+    "                print(\"¡¡Gracias por la visita, hasta luego!!\")\n",
+    "                break\n",
+    "            for producto in self.inventario:  #Recorrer los diccionarios dentro de la lista\n",
+    "                if compra == producto[\"nombre\"]:   #Verificar que el producto esta en el inventario\n",
+    "                    if producto[\"cantidad\"] > 0:   #Verificar que tiene stock\n",
+    "                        if compra in carrito:\n",
+    "                            carrito[compra][\"cantidad\"] += 1          #Si ya habia añadido alguno al carrito se suma la cantidad\n",
+    "                        else:                                         #Si no habia añadido al carrito, se añade\n",
+    "                            carrito[compra] = {\"precio\": producto[\"precio\"], \"cantidad\": 1}\n",
+    "                    else:                                #Else para el if que verifica si hay stock disponible\n",
+    "                        print(\"Ingresa un articulo con stock\")\n",
+    "                    break\n",
+    "            else:              #for-else por si no entra en el if\n",
+    "                print(\"El producto no esta en el stock\")\n",
+    "        #Restar del inventario\n",
+    "        for producto in self.inventario:      #Iterar por la lista\n",
+    "            if producto[\"nombre\"] in carrito:   #Si el producto esta en el carrito\n",
+    "                producto[\"cantidad\"] -= carrito[producto[\"nombre\"]][\"cantidad\"]    #Resta la cantidad al inventario\n",
+    "        #Mostrar carrito\n",
+    "        total = 0\n",
+    "        print(\"Compra realizada\")\n",
+    "        for k,v in carrito.items():\n",
+    "            subtotal = v[\"precio\"] * v[\"cantidad\"]\n",
+    "            total += subtotal\n",
+    "            print(f\"{producto[\"nombre\"]}, Cantidad: {v[\"cantidad\"]}, Subtotal: {subtotal}\")\n",
+    "            print(f\"Total de la compra: {total}\")                  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 285,
    "id": "86ca79cd",
    "metadata": {},
    "outputs": [
@@ -105,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 286,
    "id": "307554e2",
    "metadata": {},
    "outputs": [
@@ -123,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 287,
    "id": "e2883b79",
    "metadata": {},
    "outputs": [
@@ -141,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 288,
    "id": "65516705",
    "metadata": {},
    "outputs": [
@@ -155,7 +178,7 @@
        "  'Marta': {'email': 'marta@gmail.com'}}}"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 289,
    "id": "3b129439",
    "metadata": {},
    "outputs": [
@@ -185,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 290,
    "id": "41ee174f",
    "metadata": {},
    "outputs": [
@@ -204,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 291,
    "id": "407fdfeb",
    "metadata": {},
    "outputs": [
@@ -214,19 +237,13 @@
      "text": [
       " Nombre: fresa, Precio: 2.5, Cantidad: 50\n",
       " Nombre: pera, Precio: 1.2, Cantidad: 40\n",
-      "None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[239]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrealizar_compra\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[232]\u001b[39m\u001b[32m, line 70\u001b[39m, in \u001b[36mTiendaOnline.realizar_compra\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m compra \u001b[38;5;129;01min\u001b[39;00m producto[\u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m     69\u001b[39m     carrito = {producto[\u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m]: producto[\u001b[33m\"\u001b[39m\u001b[33mprecio\u001b[39m\u001b[33m\"\u001b[39m]}\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minventario\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprecio\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m -= carrito[\u001b[33m\"\u001b[39m\u001b[33mprecio\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     71\u001b[39m     \u001b[38;5;28mprint\u001b[39m(carrito)\n",
-      "\u001b[31mTypeError\u001b[39m: list indices must be integers or slices, not str"
+      "None\n",
+      "¡¡Gracias por la visita, hasta luego!!\n",
+      "Compra realizada\n",
+      "pera, Cantidad: 3, Subtotal: 7.5\n",
+      "Total de la compra: 7.5\n",
+      "pera, Cantidad: 1, Subtotal: 1.2\n",
+      "Total de la compra: 8.7\n"
      ]
     }
    ],
